Remove textarea Markdown editor
The Markdown editor was previously added in adc4c39 (#114)

--- a/src/WebApp/Pages/Staff/WorkEntries/Add.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Add.cshtml
@@ -21,8 +21,7 @@
         <div class="row">
             <div class="col-md">
                 <div class="mb-3">
-                    @Html.EditorFor(model => model.Item.Notes, EditorTemplate.Textarea,
-                        additionalViewData: new { Rows = 5, MDE = true })
+                    @Html.EditorFor(model => model.Item.Notes, EditorTemplate.Textarea, additionalViewData: new { Rows = 5 })
                 </div>
             </div>
             <div class="col-md">
@@ -44,10 +43,4 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-    <script src="~/lib/easymde/dist/easymde.min.js"></script>
-    <script src="~/js/textarea-to-MDE.js" defer></script>
-}
-@section Styles {
-    <link rel="stylesheet" href="~/lib/easymde/dist/easymde.min.css" />
-    <link rel="stylesheet" href="~/css/easymde.darkmode.css"/>
 }
