--- a/src/WebApp/Pages/Staff/WorkEntries/Details.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Details.cshtml
@@ -3,7 +3,6 @@
 @using MyApp.AppServices.WorkEntries.Permissions
 @using MyApp.WebApp.Pages.Shared.DisplayTemplates
 @using MyApp.WebApp.Pages.Shared.EditorTemplates
-@using MyApp.WebApp.Platform.Rendering
 @model DetailsModel
 @{
     ViewData["Title"] = $"WorkEntry ID {Model.ItemView.Id.ToString()}";
@@ -86,8 +85,8 @@
 </div>
 
 <h2 class="h3">Notes</h2>
-<section class="border border-info p-4 rounded mb-3 bg-light-subtle">
-    @Html.Raw(MarkdownHelper.MarkdownToHtml(Model.ItemView.Notes))
+<section class="border p-4 rounded mb-3 bg-light-subtle">
+    <div class="text-break text-pre-line">@Html.DisplayFor(_ => Model.ItemView.Notes, DisplayTemplate.StringOrPlaceholder)</div>
 </section>
 
 
@@ -176,9 +175,7 @@
                     </div>
 
                     <div class="card-body ">
-                        <div class="text-break text-pre-line">
-                            @Html.DisplayFor(_ => action.Comments, DisplayTemplate.StringOrPlaceholder, new { Placeholder = "none" })
-                        </div>
+                        <div class="text-break text-pre-line">@Html.DisplayFor(_ => action.Comments, DisplayTemplate.StringOrPlaceholder, new { Placeholder = "none" })</div>
                     </div>
                     @if (action.DeletedBy is not null || action.DeletedAt is not null)
                     {
