--- a/src/WebApp/Pages/Staff/WorkEntries/Edit.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Edit.cshtml
@@ -20,8 +20,7 @@
         <div class="row">
             <div class="col-md">
                 <div class="mb-3">
-                    @Html.EditorFor(model => model.Item.Notes, EditorTemplate.Textarea,
-                        additionalViewData: new { Rows = 5, MDE = true })
+                    @Html.EditorFor(model => model.Item.Notes, EditorTemplate.Textarea, additionalViewData: new { Rows = 5 })
                 </div>
             </div>
             <div class="col-md">
@@ -43,12 +42,4 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-    <script src="~/lib/easymde/dist/easymde.min.js"></script>
-    <script src="~/lib/dompurify/purify.min.js"></script>
-    <script src="~/js/textarea-to-MDE.js" defer></script>
-}
-
-@section Styles {
-    <link rel="stylesheet" href="~/lib/easymde/dist/easymde.min.css" />
-    <link rel="stylesheet" href="~/css/easymde.darkmode.css" />
 }
