Configure HTTP security headers
- Update the SecurityHeaders package
- Configure the security header and minimal CSP policies (initially set to report only)
- Add CSP tag helpers

--- a/src/WebApp/Pages/Staff/WorkEntries/DownloadSearch.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/DownloadSearch.cshtml
@@ -31,5 +31,5 @@ else
             Return to search results
         </a>
     </p>
-    <script>window.location = document.getElementById("download-link").href;</script>
+    <script asp-add-content-to-csp>window.location = document.getElementById("download-link").href;</script>
 }
