--- a/src/WebApp/Pages/Shared/_ValidationScriptsPartial.cshtml
+++ b/src/WebApp/Pages/Shared/_ValidationScriptsPartial.cshtml
@@ -2,7 +2,7 @@
         integrity="sha512-KFHXdr2oObHKI9w4Hv1XPKc898mE4kgYx58oqsc/JqqdLMDI4YjOLzom+EMlW8HFUd0QfjfAvxSL6sEq/a42fQ=="></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"
         integrity="sha512-xq+Vm8jC94ynOikewaQXMEkJIOBp7iArs3IhFWSWdRT3Pq8wFz46p+ZDFAR7kHnSFf+zUv52B3prRYnbDRdgog=="></script>
-<script>
+<script asp-add-content-to-csp>
     // Change validation classes to work with Bootstrap
     const settings = {
         validClass: "is-valid",
